@@ -26,7 +26,7 @@ dnl --------------------------------------------------------------------
 AC_SUBST(GTK_CAIRO_REQUIRED, 2.8.0)
 AC_SUBST(LIBNOTIFY_REQUIRED, 0.2.1)
 AC_SUBST(LIBGNOME_REQUIRED, 2.8.1)
-AC_SUBST(GTK_REQUIRED, 2.4.0)
+AC_SUBST(GTK_REQUIRED, 2.6.0)
 AC_SUBST(GLIB_REQUIRED, 2.4.0)
 AC_SUBST(LIBXML_REQUIRED, 2.4.0)
 AC_SUBST(LIBGLADE_REQUIRED, 2.4.2)
